# minimap_renderer

./: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README-cn.md  README.md  app.py  create_data.py  extract.py  pyproject.toml  render.py  render_dual.py  replay_parser.py  requirements-yuyuko.txt  requirements.txt  run.bat  setup.cfg  setup.py  token.json  tox.ini  公网运行.bat  运行.bat  部署-第一次运行.bat
.github/: CONTRIBUTING.md
.github/workflows/: tests.yaml  (+1 more)
abilities/: GameParams.py  abilities.json  abilities.py
achievement/: GameParams.py  achievement.py
data/: __init__.py  utils.py
docs/: index.md
maps/: spaces.py
planes/: plane.py
projectile/: projectile.json  projectile.py
renderer/: __init__.py  base.py  const.py  data.py  exceptions.py  render.py  resman.py  utils.py
renderer_data/: __init__.py
replay_unpack/: replay_reader.py  utils.py
replays/: 1110.wowsreplay  1111.wowsreplay  116.wowsreplay  117.wowsreplay  118.wowsreplay  119.wowsreplay  120.wowsreplay  121.wowsreplay  1210.wowsreplay  1211.wowsreplay  122.wowsreplay  123.wowsreplay  124.wowsreplay  125.wowsreplay  126.wowsreplay  127.wowsreplay  128.wowsreplay  129.wowsreplay  130.wowsreplay  131.wowsreplay  1310.wowsreplay  1311.wowsreplay  132.wowsreplay  133.wowsreplay  134.wowsreplay  135.wowsreplay  136.wowsreplay  137.wowsreplay  138.wowsreplay  139.wowsreplay  140.wowsreplay  141.wowsreplay  142.wowsreplay  143.wowsreplay  144.wowsreplay  languages.wowsreplay
resources/: global.mo
ships/: ships.json  ships.py
src/: render.py  render_web.py  replay_parser.py
tests/: test_all.py
(+829 files in other folders)
