[metadata]
name = minimap-renderer
version = 0.11.8.1
author = notyourfather, trackpad
description = Minimap Renderer parses World of Warships replays to create a timelapse video that resembles the in-game minimap.
long_description = file: README.md, LICENSE
keywords = minimap, renderer, worldofwarships, wows, replay
license = AGPL 3.0
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3

[options]
python_requires = >=3.10
zip_safe = False
package_dir=
    = src
packages = find_namespace:
py_modules = replay_parser, render
include_package_data = True
install_requires =
    imageio-ffmpeg==0.4.7
    lxml==4.9.1
    numpy==1.23.2
    Pillow==9.2.0
    pycryptodomex==3.15.0
    tqdm==4.64.0

[options.extras_require]
testing =
    flake8==5.0.4
    black==22.6.0
    pytest==7.1.2
    tox==3.25.1

[options.package_data]
* = *

[options.packages.find]
where = src

